[gd_scene load_steps=12 format=3 uid="uid://ud3ktt2adw8l"]

[ext_resource type="Script" uid="uid://dmp6qqm3q16pc" path="res://Scripts/UI/AchievementUnlockPopup.gd" id="1_uc4d1"]
[ext_resource type="StyleBox" uid="uid://comkghpj0djcl" path="res://Resources/UI/Panel.tres" id="1_x3tc0"]
[ext_resource type="Texture2D" uid="uid://bul3c11keqjfi" path="res://Assets/Sprites/UI/AchievementIcons.png" id="2_uc4d1"]
[ext_resource type="AudioStream" uid="uid://yxb07387lw0o" path="res://Assets/Audio/SFX/AchievementUnlock.wav" id="3_r2311"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="5_01gcg"]
[ext_resource type="Script" uid="uid://dmtw1jesw1vl7" path="res://Scripts/Classes/Components/PackStreamPlayer.gd" id="5_ok8j7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wsi03"]
color = Color(1, 1, 1, 1)
grow_begin = -4.0
grow_end = -5.0

[sub_resource type="Animation" id="Animation_twc32"]
resource_name = "Appear"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3.0000002, 3.5000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 96), Vector2(0, 0), Vector2(0, 0), Vector2(0, 96)]
}

[sub_resource type="Animation" id="Animation_uc4d1"]
resource_name = "AppearLong"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 96), Vector2(0, 0), Vector2(0, 0), Vector2(0, 96)]
}

[sub_resource type="Animation" id="Animation_wjo1g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 96)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wsi03"]
_data = {
&"Appear": SubResource("Animation_twc32"),
&"AppearLong": SubResource("Animation_uc4d1"),
&"RESET": SubResource("Animation_wjo1g")
}

[node name="AchievementUnlock" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_uc4d1")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_top = 96.0
offset_bottom = 96.0

[node name="Panel" type="PanelContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_x3tc0")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = -8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ACHIEVEMENT_UNLOCK"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_wsi03")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Icon" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_uc4d1")
region_rect = Rect2(0, 0, 32, 32)

[node name="Icon2" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_uc4d1")
region_rect = Rect2(0, 0, 32, 32)

[node name="Icon3" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_uc4d1")
region_rect = Rect2(0, 0, 32, 32)

[node name="Icon4" type="NinePatchRect" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_uc4d1")
region_rect = Rect2(0, 0, 32, 32)

[node name="Extra" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "+1"

[node name="AchievementName" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "aaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
text_overrun_behavior = 3
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wsi03")
}

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r2311")
bus = &"SFX"
script = ExtResource("5_ok8j7")

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("5_01gcg")
labels = [NodePath("../Control/Panel/MarginContainer/VBoxContainer/Label"), NodePath("../Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/Extra"), NodePath("../Control/Panel/MarginContainer/VBoxContainer/AchievementName")]
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"
